load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix go.skia.org/infra
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["run_unittests.go"],
    importpath = "go.skia.org/infra",
    visibility = ["//visibility:private"],
    deps = [
        "//go/common:go_default_library",
        "//go/fileutil:go_default_library",
        "//go/git:go_default_library",
        "//go/sklog:go_default_library",
        "//go/testutils/unittest:go_default_library",
        "//go/timer:go_default_library",
        "//go/util:go_default_library",
    ],
)

go_binary(
    name = "infra",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
